<resources>
    <string name="app_name">Event Manager</string>
    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Event Notification</string>
    <string name="new_event_header">New Event</string>
    <string name="event_title_default_text">Title</string>
    <string name="event_location_default_text">Location</string>
    <string name="new_event_set_date_button_text">Set Date:</string>
    <string name="add_event_date_button_text">Date:</string>
    <string name="start_time_button_text">Start Time:</string>
    <string name="end_time_button_text">End Time:</string>
    <string name="alert_button_text">Alert Type</string>
    <string name="template_toggle_text">Save Template:</string>
    <string name="load_template_button_text">Load From Templates</string>
    <string name="add_to_calendar_button_text">Add To Calendar</string>

    <string name="time_dash_separator"> - </string>

    <string name="alert_time_declaration">Alert Time:</string>

    <string name="at_time_of_event_popup_menu_item">At time of event</string>
    <string name="five_minutes_before_popup_menu_item">Five minutes before event</string>
    <string name="thirty_minutes_before_popup_menu_item">Thirty minutes before event</string>
    <string name="one_hour_before_popup_menu_item">One hour before event</string>
    <string name="one_day_before_popup_menu_item">One day before event</string>
    <string name="one_week_before_popup_menu_item">One week before event</string>

    <string name="floating_action_button_content_description">Launches Activity</string>

</resources>