<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_event_header"
        android:gravity="center"
        android:textSize="25sp"
        android:paddingTop="25dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="0"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/event_title_default_text"
            android:id="@+id/event_title"
            android:autofillHints="Event Title" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="text"
            android:layout_weight="0"
            android:hint="@string/event_location_default_text"
            android:id="@+id/event_location"
            android:autofillHints="Event Location" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal" >
        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/date_button"
            android:text="@string/new_event_set_date_button_text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/set_date_text_view"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/start_time_button"
            android:text="@string/start_time_button_text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/start_time_text_view"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/end_time_button"
            android:text="@string/end_time_button_text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/end_time_text_view"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alert_type_button"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/alert_button_text"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/template_toggle_text" />
        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_template_button"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/load_from_template_button"
        android:text="@string/load_template_button_text"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_to_calendar_button_text"
        android:id="@+id/add_to_calendar_button"
        android:textSize="20sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />


</LinearLayout>